# AEGIS

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
agent/: .agent_id  Dockerfile  aegis_agent.py  build.sh  build_agent.py  config.py  config_windows.py  install.sh  network_discovery.py  requirements.txt
agent-rust/: Cargo.toml
agent-rust/src/: discovery.rs  fim.rs  lib.rs  main.rs  monitor.rs
backend/: .dockerignore  .env.example  .env.feeds.example  .gitignore  Dockerfile  alembic.ini  requirements-network.txt  requirements-rag.txt  requirements-reports.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  a253b97201e8_detect_schema_drift.py
backend/app/: config.py  database.py  main.py
backend/app/api/: ._infra.py  admin.py  agents.py  ai_providers.py  antivirus.py  ask_ai.py  auth.py  behavioral.py  correlation.py  dashboard.py  deception.py  edr.py  feeds.py  firewall.py  infra.py  intel_cloud.py  network.py  nodes.py  onboarding.py  payments.py  phantom.py  quantum.py  rag.py  ransomware.py  reports.py  response.py  sbom.py  settings.py  setup.py  surface.py  threat_intel_hub.py  threats.py  updates.py
backend/app/core/: ai_manager.py  ai_providers.py  attack_detector.py  auth.py  event_stream.py  events.py  firewall_client.py  guardrails.py  ip_blocker.py  mongo_client.py  openrouter.py  ws_push.py
backend/app/models/: __init__.py  action.py  asset.py  attacker_profile.py  audit_log.py  av_detection.py  base.py  client.py  endpoint_agent.py  firewall_rule.py  honey_breadcrumb.py  honeypot.py  incident.py  ransomware_event.py  shared_intel.py  threat_intel.py  user.py  vulnerability.py
backend/app/modules/network/: dns_monitor.py  entropy.py  ndr_lite.py
backend/app/modules/phantom/: http_honeypot.py  intel.py  orchestrator.py  processor.py  profiler.py  rotation.py  smart_api.py  smart_db.py  smart_http.py  ssh_honeypot.py  ssh_honeypot_patch.py
backend/app/modules/quantum/: adversarial_detector.py  entropy_analyzer.py  grover_calculator.py
backend/app/modules/response/: analyzer.py  ingestion.py  playbooks.py  responder.py
backend/app/modules/surface/: discovery.py  hardener.py  nuclei.py  risk_scorer.py  sbom.py
backend/app/services/: ai_configurator.py  ai_engine.py  attack_chain_detector.py  auto_discovery.py  auto_updater.py  behavioral_ml.py  correlation_engine.py  counter_attack.py  firewall_engine.py  firewall_sync.py  host_monitor.py  hub_sync_client.py  intel_cloud.py  ip_investigator.py  log_watcher.py  notifier.py  playbook_engine.py  process_tree.py  rag_seed.py  rag_service.py  report_generator.py  report_scheduler.py  reporter.py  scanner.py  scheduled_scanner.py  signature_updater.py  subscription.py  threat_feeds.py  threat_intel_hub.py
backend/app/services/honey_ai/: __init__.py  breadcrumb_tracker.py  campaign.py  content_generator.py  orchestrator.py  themes.py
backend/scripts/: import_sigma.py
desktop-tauri/: README.md  package.json
desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tauri/src-tauri/src/: lib.rs  main.rs
docs/: index.html  robots.txt  sitemap.xml
frontend/: .dockerignore  Dockerfile  components.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/setup/: page.tsx
frontend/src/components/deception/: BreadcrumbHits.tsx  CampaignBuilder.tsx
frontend/src/lib/: api.ts  constants.ts  types.ts  utils.ts  ws.ts
node-tauri/: package.json
node-tauri/src-tauri/: Cargo.toml  tauri.conf.json
node-tauri/src-tauri/capabilities/: default.json
node-tauri/src-tauri/src/: lib.rs  main.rs
node-tauri/src-tauri/src/antivirus/: clamav_bridge.rs  hash_cache.rs  mod.rs  quarantine.rs  yara_engine.rs
node-tauri/src-tauri/src/edr/: ebpf_linux.rs  etw_windows.rs  event_buffer.rs  mod.rs  poller.rs  uploader.rs
node-tauri/src-tauri/src/ransomware/: canary.rs  detector.rs  entropy.rs  killer.rs  mod.rs  rollback_linux.rs  rollback_windows.rs
node-tauri/ui/: index.html
scripts/: dev.sh  gen_diagram.py  install-windows-agent.ps1  install-windows.ps1  install.sh  migrate_sqlite_to_postgres.py  migrate_to_postgres.py  seed.py  setup-wizard.py  setup.sh  test-windows.py  test_openrouter.py
(+35 files in other folders)
