[package]
name = "aegis_desktop"
version = "0.1.0"
description = "AEGIS desktop app (Tauri)"
authors = ["AEGIS"]
license = "UNLICENSED"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aegis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "time"] }
sysinfo = "0.34"
aegis-agent-rust = { path = "../../agent-rust" }
