[package]
name = "aegis_node"
version = "0.1.0"
description = "AEGIS Node Agent — lightweight endpoint monitor"
authors = ["AEGIS"]
license = "UNLICENSED"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aegis_node_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-log = "2"
tokio = { version = "1", features = ["sync", "time"] }
sysinfo = "0.34"
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"
rand = "0.8"
aegis-agent-rust = { path = "../../agent-rust" }
notify = "7"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
